--- a/css/style.css
+++ b/css/style.css
@@ -11,18 +11,21 @@ body{
 
 .container-v-center{
     position: absolute;
-    top: 25%;
     bottom: 25%;
-    width: 100%;
+    width: 95%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
 }
 
 .main{
     min-width: 280px;
     max-width: 572px;
-    background-color: #2d333b;
+    background-color: #2d333b;/*E9EBF2*/
     border-radius: 1em;
     margin: 0 auto;
     padding: .75em 0;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .avatar-user{
@@ -32,6 +35,7 @@ body{
     width: 100px;
     margin: 0 auto;
     border: .3em solid #89D1D9;
+    user-select: none;
 }
 
 .names p{
@@ -56,28 +60,78 @@ body{
     margin-top: 1em;
 }
 
-.links a{
-    margin: 0 .375em;
-}
-
-.links a svg{
+svg{
     width: 37px;
     height: auto;
+    user-select: none;
+}
+
+.links a{
+    margin: 0 .375em;
+    transition: .25s;
 }
 
 .links a svg:hover{
     fill: #89D1D9 !important;
+    transition: .25s;
+    transform: scale(1.05);
 }
 
-.projectes{
+.other-links{
     display: block;
     padding: 0 .5em;
 }
 
-.projectes div{
-    background-color: #89D1D9;
+.block{
+    background-color: #5e636e;
     border-radius: 1em;
+    max-width: 500px;
+    height: 61px;
+    margin: 1em auto;
+    transition: .25s;
+}
+
+.block a{
     width: 100%;
-    height: 75px;
-    margin: .4em 0;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 0.15fr 1fr 0.15fr;
+    grid-template-rows: 0.2fr 1fr 0.2fr;
+    text-decoration: none;
+}
+
+.block-icon{
+    grid-row: 2;
+}
+.block-text{
+    grid-row: 2;
+    margin: auto;
+    color: white;
+    font-size: large;
+    font-family: monospace;
+}
+
+.block:hover{
+    transform: scale(1.1, 1.05);
+}
+
+.block a svg{
+    margin: auto;
+}
+
+.block a{
+    user-select: none;
+}
+
+@media (max-width:414px){
+    .block{
+        height: 45px;
+    }
+    .block a{
+        grid-template-columns: 0.2fr 1fr 0.2fr;
+        grid-template-rows: 0fr 1fr 0fr;
+    }
+    .block-icon{
+        width: 32px !important;
+    }
 }
