--- a/projectes/style.css
+++ b/projectes/style.css
@@ -12,8 +12,8 @@ body{
 }
 
 .circle {
-    border: .15em solid #2d333b;
-    box-shadow: inset 0px 0px 1em -5px #525e6f, 0px 0px 1em -5px #525e6f;
+    border: .15em solid #587073;
+    box-shadow: inset 0px 0px 1em -5px #8AA3A6, 0px 0px 1em -5px #587073;
     border-radius: 50%;
     background-color: transparent;
     transition: .25s;
@@ -23,24 +23,47 @@ body{
     max-height: 82vh;
 }
 
-/* .circle:hover{
-    transform: scale(1.05);
-} */
+.circle:hover{
+  border: .15em solid #89d1d9;
+  box-shadow: inset 0px 0px 1em -5px #8A63A7, 0px 0px 1em -5px #89d1d9;
+}
 
 .item{
     border-radius: 50%;
-    position: absolute;
-    background-color: red;
-    box-shadow: 0px 0px 1em -5px wheat;
+    background-color: #587073;
+    box-shadow: 0px 0px 1em -5px #89d1d9;
+    height: 100%;
+    z-index: 99;
+    position: relative;
 }
 
 .item:hover{
-    box-shadow: -10px 0 80px #f0f, 10px 0 80px #0ff;
+  box-shadow: 0px 0px 2em #8A63A7, 0px 0px 2em #89d1d9;
 }
 
 
-/* test */
-@keyframes rotate360l {
+.item-details{
+  background: #89d1d9;
+  position: absolute;
+  z-index: 0;
+  top: 50%;
+  bottom: 50%;
+  opacity: 0;
+  transform: translate(-50%, -50%) scaleX(0.1);
+  transition: transform 1s ease-out, opacity 1s ease-out;
+}
+
+.item:hover + .item-details {
+  transform: translate(15%, -50%) scaleX(1);
+  opacity: 1;
+}
+
+.circle:hover .item{
+  background-color: #89d1d9;
+}
+
+
+/* @keyframes rotate360l {
   from {
     transform: rotate(0deg);
   }
@@ -59,15 +82,15 @@ body{
   } 
 
 .rotate-l {
-  /* animation: rotate360l 25s linear infinite; */
+  animation: rotate360l 60s linear infinite;
 }
 .rotate-l:hover {
     animation-play-state: paused;
 }
 
 .rotate-r {
-  /* animation: rotate360r 25s linear infinite; */
+  animation: rotate360r 60s linear infinite;
 }
 .rotate-r:hover {
     animation-play-state: paused;
-}
+}  */
